infrastructure/deployment-pgadmin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shopping-list
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-list
  template:
    metadata:
      labels:
        app: shopping-list
    spec:
      containers:
      - name: pgadmin
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        image: dpage/pgadmin4
