infrastructure/deployment-shopping-list-front-end.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shopping-list
  name: shopping-list-front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-list
  template:
    metadata:
      labels:
        app: shopping-list
    spec:
      containers:
      - name: shopping-list-front-end
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        image: wubin28/shopping-list-front-end:v1.1
