infrastructure/service-pgadmin.yml

apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
spec:
  selector:
    app: shopping-list
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
