infrastructure/service-postgres.yml

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: shopping-list
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
