infrastructure/service-shopping-list-api.yml

apiVersion: v1
kind: Service
metadata:
  name: shopping-list-api-service
spec:
  selector:
    app: shopping-list
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: LoadBalancer
