infrastructure/service-shopping-list-front-end.yml

apiVersion: v1
kind: Service
metadata:
  name: shopping-list-front-end-service
spec:
  selector:
    app: shopping-list
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
